# TrainAI

./: .gitignore  PROJECT_OVERVIEW.md  README.md
backend/: Dockerfile  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
backend/src/: settings.py  supabase_client.py
backend/src/api/: __init__.py
backend/src/api/equipment/: __init__.py  router.py
backend/src/api/videos/: router.py
backend/src/schemas/: equipment.py  video.py
backend/src/services/: equipment.py  video.py
frontend/: BACKEND_REQUIREMENTS.md  CLAUDE.md  index.html  package.json
frontend/database/: 01_create_equipment_table.sql  02_create_equipment_table.sql  03_create_equipment_files_table.sql  03_create_videos_table.sql  04_create_scenes_table.sql  README.md
frontend/src/: App.tsx  index.css
frontend/src/components/: AppLayout.tsx  ProtectedRoute.tsx  confirm-dialog-provider.tsx
frontend/src/lib/: api-client.ts  api-error.ts
src/: App.tsx
src/components/: AddTripDialog.tsx  AppLayout.tsx  AppSidebar.tsx  CountryTimeline.tsx  CreatePassportDialog.tsx  EditStampDialog.tsx  EditTripDialog.tsx  Map.tsx  StampCard.tsx  trip-date-filter.tsx
src/contexts/: AuthContext.tsx  PassportContext.tsx
src/hooks/: use-toast.ts
src/lib/: countries.ts
src/pages/: Documents.tsx  EquipmentDetail.tsx  Home.tsx  Knowledge.tsx  Library.tsx  Passports.tsx  Register.tsx  Stamps.tsx  Studio.tsx  Terms.tsx  Trips.tsx  Validate.tsx  VerifyEmail.tsx
src/services/: passport-pages.service.ts  passport.service.ts  stamps.service.ts  trips.service.ts
src/types/: passport.ts  trip.ts
(+18 files in other folders)
